--- a/Vastar/SideBar/SubPage/Product/ProductDetailViewController.xib
+++ b/Vastar/SideBar/SubPage/Product/ProductDetailViewController.xib
@@ -34,58 +34,58 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="produce_used_frame" translatesAutoresizingMaskIntoConstraints="NO" id="d7a-4b-8IT">
-                    <rect key="frame" x="10" y="302" width="355" height="355"/>
+                    <rect key="frame" x="10" y="301.5" width="355" height="355.5"/>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gnN-rS-bM9">
-                    <rect key="frame" x="90" y="20" width="195" height="180"/>
+                    <rect key="frame" x="50" y="20" width="275" height="180"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="180" id="Lda-KA-edA"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDx-so-8P8">
-                    <rect key="frame" x="30" y="220" width="42" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDx-so-8P8">
+                    <rect key="frame" x="30" y="220" width="315" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kPd-L7-EIF">
-                    <rect key="frame" x="30" y="261" width="42" height="21"/>
+                    <rect key="frame" x="30" y="260.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytt-9m-Loa">
-                    <rect key="frame" x="273" y="261" width="42" height="21"/>
+                    <rect key="frame" x="273" y="260.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ueM-8S-gBs">
-                    <rect key="frame" x="87" y="335.5" width="32" height="34"/>
+                    <rect key="frame" x="87" y="335" width="32" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AzW-Pl-E7X">
-                    <rect key="frame" x="87" y="394.5" width="32" height="34"/>
+                    <rect key="frame" x="87" y="394" width="32" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thH-kt-S49">
-                    <rect key="frame" x="219" y="391.5" width="88" height="40"/>
+                    <rect key="frame" x="219" y="391" width="88" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="T1z-XP-AkS"/>
                     </constraints>
                     <state key="normal" title="Button" backgroundImage="btn"/>
                 </button>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="z7n-KI-lvu">
-                    <rect key="frame" x="35" y="452" width="305" height="165"/>
+                    <rect key="frame" x="35" y="451.5" width="305" height="165.5"/>
                     <color key="backgroundColor" red="0.0" green="0.2373641729" blue="0.1482656598" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <color key="textColor" systemColor="labelColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYA-zR-h6U">
-                    <rect key="frame" x="279" y="335.5" width="36" height="34"/>
+                    <rect key="frame" x="279" y="335" width="36" height="34"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="36" id="W0P-oL-fc0"/>
                     </constraints>
@@ -93,27 +93,27 @@
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ug-PI-nFX">
-                    <rect key="frame" x="325" y="337.5" width="30" height="30"/>
+                    <rect key="frame" x="325" y="337" width="30" height="30"/>
                     <state key="normal" title="+"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhf-gb-UCE">
-                    <rect key="frame" x="239" y="337.5" width="30" height="30"/>
+                    <rect key="frame" x="239" y="337" width="30" height="30"/>
                     <state key="normal" title="-"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8k1-3x-HRI">
-                    <rect key="frame" x="187" y="342" width="42" height="21"/>
+                    <rect key="frame" x="187" y="341.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rlD-ex-T3F">
-                    <rect key="frame" x="35" y="342" width="42" height="21"/>
+                    <rect key="frame" x="35" y="341.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vgF-7r-PHn">
-                    <rect key="frame" x="35" y="401" width="42" height="21"/>
+                    <rect key="frame" x="35" y="400.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -122,7 +122,7 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gnN-rS-bM9" secondAttribute="trailing" constant="90" id="0mX-um-OHQ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gnN-rS-bM9" secondAttribute="trailing" constant="50" id="0mX-um-OHQ"/>
                 <constraint firstItem="rlD-ex-T3F" firstAttribute="centerY" secondItem="ueM-8S-gBs" secondAttribute="centerY" id="1UH-ql-ZaW"/>
                 <constraint firstItem="thH-kt-S49" firstAttribute="leading" secondItem="AzW-Pl-E7X" secondAttribute="trailing" constant="100" id="8Ao-M8-Lir"/>
                 <constraint firstItem="Hhf-gb-UCE" firstAttribute="leading" secondItem="8k1-3x-HRI" secondAttribute="trailing" constant="10" id="Cxw-4T-32B"/>
@@ -137,12 +137,13 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="z7n-KI-lvu" secondAttribute="trailing" constant="35" id="N2m-ty-88b"/>
                 <constraint firstItem="JDx-so-8P8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="OCE-WQ-ufl"/>
                 <constraint firstItem="vgF-7r-PHn" firstAttribute="centerY" secondItem="AzW-Pl-E7X" secondAttribute="centerY" id="QNV-LH-2Eg"/>
-                <constraint firstItem="gnN-rS-bM9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="90" id="Qrc-1W-Mf3"/>
+                <constraint firstItem="gnN-rS-bM9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="Qrc-1W-Mf3"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="thH-kt-S49" secondAttribute="trailing" constant="68" id="S6y-cP-3sO"/>
                 <constraint firstItem="d7a-4b-8IT" firstAttribute="top" secondItem="kPd-L7-EIF" secondAttribute="bottom" constant="20" id="TWs-a0-q8f"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ytt-9m-Loa" secondAttribute="trailing" constant="60" id="Y3N-ST-ckf"/>
                 <constraint firstItem="thH-kt-S49" firstAttribute="centerY" secondItem="AzW-Pl-E7X" secondAttribute="centerY" id="YBb-pS-qYt"/>
                 <constraint firstItem="Ytt-9m-Loa" firstAttribute="centerY" secondItem="kPd-L7-EIF" secondAttribute="centerY" id="Yy3-sc-4NU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="JDx-so-8P8" secondAttribute="trailing" constant="30" id="ZyA-1w-uGi"/>
                 <constraint firstItem="AzW-Pl-E7X" firstAttribute="leading" secondItem="vgF-7r-PHn" secondAttribute="trailing" constant="10" id="aZV-e3-6qs"/>
                 <constraint firstItem="z7n-KI-lvu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="35" id="cPv-41-VTO"/>
                 <constraint firstItem="kPd-L7-EIF" firstAttribute="leading" secondItem="JDx-so-8P8" secondAttribute="leading" id="dRz-6j-2Bw"/>
